@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 0.9-beta3:
+  * chg: software volume mixer uses a logarithmic function to make the scale more natural
   * add: Global shortcuts to display OSD and increase/decrease volume.
          (Win+o and Win+KP_Add/KP_Subtract by default, respectively)
   * add: DCOP calls to control OSD and playback volume
